
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint64_t ;
struct perf_event_attr {int size; int mmap; int comm; int exclude_kernel; int config; int type; } ;
typedef int attr ;


 int PERF_TYPE_SOFTWARE ;
 int SYS_perf_event_open ;
 int memset (struct perf_event_attr*,int ,int) ;
 int syscall (int ,struct perf_event_attr*,int ,int,int,int ) ;

__attribute__((used)) static int perf_open(uint64_t off)
{
 struct perf_event_attr attr;
 int rc;



 memset(&attr, 0, sizeof(attr));

 attr.type = PERF_TYPE_SOFTWARE;
 attr.size = sizeof(attr);
 attr.config = off;
 attr.mmap = 1;
 attr.comm = 1;
 attr.exclude_kernel = 1;

 rc = syscall(SYS_perf_event_open, &attr, 0, -1, -1, 0);

 return rc;
}
